--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <title>Recipes</title>
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <img src="https://www.allrecipes.com/thmb/wdL4oOL3eH9hmpM504ODf96TO2o=/800x533/filters:no_upscale():max_bytes(150000):strip_icc():focal(399x0:401x2):format(webp)/102170310_Slow-CookerBarbecueRibs4x3AllrecipesMagazine-ef7ca67a8ed54e25a2f0ba0049f7dd25.jpg" alt="recipes">
-        <h2>Recipes</h2>
-        <ul>
-        <li><a href="recipes/burger.html">Burger</a></li>
-        <li><a href="recipes/bangsauce.html">Bang Sauce</a></li>
-        <li><a href="recipes/drink.html">Chilton Cocktail</a></li>
-        </ul>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="master">
+        <div class="box-1" >
+            <h1 class="tittle">Odin Recipes</h1>
+            <a  class="button-1" href="#">Saiba mais</a>
+
+        </div>
+        <div class="box-2">
+
+        </div>
+
+    </div>
+    
+</body>
 </html>
