modificações pagina inicial e burger

--- a/index.html
+++ b/index.html
@@ -12,8 +12,22 @@
 <body>
     <div class="master">
         <div class="box-1" >
-            <h1 class="tittle">Odin Recipes</h1>
-            <a  class="button-1" href="#">Saiba mais</a>
+            <div>
+                <h1 class="tittle">Odin Recipes</h1>
+            </div>
+            <div class="b-button">
+                <a  class="button-1" href="recipes/burger.html">Burger</a>
+             </div>
+            <div class="b-button">
+                <a  class="button-2" href="recipes/drink.html">Drink</a>
+            </div>
+            <div class="b-button">
+                <a  class="button-3" href="recipes/bangsauce.html">Bang sauce</a>
+            </div>
+            <div class="img">
+                <img src="img/o.png" alt="carne">
+            </div>
+            
 
         </div>
         <div class="box-2">
