--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -3,28 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
     <title>Burger</title>
 </head>
 <body>
-    <h1>Burger</h1>
-    <img src="https://www.allrecipes.com/thmb/GdxmXDvK0Otv5mo-y5vdCxEQwLE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Smash-Burgers-2000-b7d0c27b259a40df8a94f75a7675b4df.jpg" alt="burger">
-    <p>This smash burger recipe makes super juicy burgers with crispy edges. <br>Don't use meat that is leaner than 80/20 for best results, and make sure the meat is very cold. <br>I prefer to cook these outdoors to avoid smoking up the kitchen. <br> grill up very fast because of the high heat, so make sure you have everything ready to go!</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>4 hamburger buns</li>
-        <li>2 tablespoons butter, softened, or as needed</li>
-        <li>1 pound ground chuck beef (80% lean)</li>
-        <li>4 6-inch squares parchment paper</li>
-        <li>salt to taste</li>
-        <li>4 slices American cheese</li>
-        <li>burger toppings of choice</li>
-    </ul>
-    <h2>Directions</h2>
-    <ol>
-        <li>Preheat an outdoor grill for high heat and lightly oil the grate. Set a cast iron flat-top griddle or large cast iron skillet onto the grill and preheat until smoking.</li>
-        <li>Spread butter on the inside of the buns and toast on the flat-top until lightly browned. Set aside.</li>
-        <li>Form meat into 8 loosely-packed balls, 2 ounces each. Do not pack the meat tightly, as this will prevent it from smashing properly. Place each ball on the hot flat-top, cover with a piece of parchment (to prevent sticking to the spatula; re-use each parchment square on a second patty) and immediately smash down to a 1/4 inch thickness using 2 stiff, sturdy spatulas that are criss-crossed to get proper leverage as you press down. You may also use the bottom of small skillet. Sprinkle the meat with salt.</li>
-        <li>Grill for about 45 seconds, until the edges are dark brown and the centers are a light pink color. Using a bench scraper or firm spatula, gently scrape up the patties, flip over and immediately cover 4 of them with cheese. Grill an additional 15 to 20 seconds; stack the plain patties over the cheese-covered patties so you have 4 stacks. Move each stack to a bun and serve with your favorite toppings.</li>
-    </ol>
+    <div class="master">
+        <div class="bb-1">
+            <h1 class="tittle">Burger</h1>
+            <p class="burger-p" >This smash burger recipe makes super juicy burgers with crispy edges.Don't use meat that is leaner than 80/20 for best results, and make sure the meat is very cold.I prefer to cook these outdoors to avoid smoking up the kitchen.grill up very fast because of the high heat, so make sure you have everything ready to go!</p>
+            <img class="img-burger" src="../img/b.png" alt="burger">
+        </div>
+        <div class="bb-2">
+            <h2 class="tittle" >Ingredients</h2>
+            <p class="burger-p" >
+                4 hamburger buns <br>
+                2 tablespoons butter, softened, or as needed <br>
+                1 pound ground chuck beef (80% lean) <br>
+                4 6-inch squares parchment paper <br>
+                salt to taste <br>
+                4 slices American cheese <br>
+                burger toppings of choice <br>
+            </p>
+            <h2 class="tittle t2" >Directions</h2>
+            <p class="desc" >Preheat an outdoor grill for high heat and lightly oil the grate. <br> Set a cast iron flat-top griddle or large cast iron skillet onto the grill and preheat until smoking. <br>
+                Spread butter on the inside of the buns and toast on the flat-top until lightly browned. Set aside. <br>
+                Form meat into 8 loosely-packed balls, 2 ounces each. <br> Do not pack the meat tightly, as this will prevent it from smashing properly. <br> Place each ball on the hot flat-top, cover with a piece of parchment (to prevent sticking to the spatula; <br> re-use each parchment square on a second patty) and immediately smash down to a 1/4 <br> inch thickness using 2 stiff, <br> sturdy spatulas that are criss-crossed to get proper leverage as you press down. <br> You may also use the bottom of small skillet. <br> Sprinkle the meat with salt.
+                Grill for about 45 seconds, <br> until the edges are dark brown and the centers are a light pink color. <br> Using a bench scraper or firm spatula, <br> gently scrape up the patties, flip over and immediately cover 4 of them with cheese. <br> Grill an additional 15 to 20 seconds; <br> stack the plain patties over the cheese-covered patties so you have 4 stacks. <br> Move each stack to a bun and serve with your favorite toppings.</p>
+
+        </div>
+    </div>
 </body>
 </html>
