--- a/recipes/bangsauce.html
+++ b/recipes/bangsauce.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
     <title>Bang Bang Sauce</title>
 </head>
 <body>
-    <h1>Bang Bang Sauce</h1>
-    <img src="https://www.allrecipes.com/thmb/4N-NpIgBT5vYBCPSay16IM7tdHw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7579460-bang-bang-sauce-Kims-Cooking-Now-4x3-1-5341019cce894635b720d02724b7d818.jpg">
-    <p>This bang bang sauce is a sweet and spicy mayonnaise-based sauce that is good on fried fish, chicken, fried potatoes — almost everything!</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>½ cup mayonnaise</li>
-        <li>2 tablespoons sweet Thai chili sauce</li>
-        <li>1 tablespoon Sriracha sauce</li>
-        <li>1 teaspoon rice vinegar</li>
-    </ul>
-    <h2>Directions</h2>
-    <ol>
-        <li>Stir together mayonnaise, chili sauce, Sriracha, and rice vinegar in a small bowl until smooth.</li>
-    </ol>
+    <div class="master">
+        <div class="bb-1">
+            <h1 class="tittle">Bang  Sauce</h1>
+            <p class="burger-p" >This bang bang sauce is a sweet and spicy mayonnaise-based sauce that is good on fried fish, chicken, fried potatoes — almost everything!
+            </p>
+            <img class="img-burger" src="../img/s.png" alt="burger">
+        </div>
+        <div class="bb-2">
+            <h2 class="tittle" >Ingredients</h2>
+            <p class="burger-p" >
+                ½ cup mayonnaise <br>
+                2 tablespoons sweet Thai chili sauce <br>
+                1 tablespoon Sriracha sauce <br>
+                1 teaspoon rice vinegar <br>
+                
+            </p>
+            <h2 class="tittle t2" >Directions</h2>
+            <p class="desc" >Stir together mayonnaise, chili sauce, Sriracha, and rice vinegar in a small bowl until smooth.</p>
+
+        </div>
+    </div>
 </body>
 </html>
